--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@
 **/android/gradlew
 **/android/gradlew.bat
 **/android/local.properties
+**/android/key.properties
 **/android/**/GeneratedPluginRegistrant.java
 .project
 android/.settings/
@@ -75,3 +76,6 @@ android/app/.settings/
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# Fastlane
+android/fastlane/report.xml
