--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,6 @@ jobs:
     steps:
       - checkout
       - run: flutter doctor
-      - run: mkdir ~/keys && cat "${JSON_KEY_DATA}" > ~/keys/api-7529015001737321481-762752-cc8254f73f46.json
-      - run: mkdir ~/src/android/ && cat "${KEY_PROPERTIES}" > ~/src/android/key.properties
+      - run: mkdir ~/keys && cat ${JSON_KEY_DATA} | base64 --decode > ~/keys/api-7529015001737321481-762752-cc8254f73f46.json
+      - run: mkdir ~/src/android/ && cat ${KEY_PROPERTIES} | base64 --decode > ~/src/android/key.properties
       - run: flutter build appbundle
