--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
     steps:
       - checkout
       - run: flutter doctor
+      - run: mkdir ~/keys
       - run: echo ${KEY_PROPERTIES} | base64 --decode > ~/src/android/key.properties
-      - run: mkdir ~/keys && echo ${JSON_KEY_DATA} | base64 --decode > ~/keys/api.json
-      - run: mkdir ~/keys && echo ${MINESWEEPER_JKS} | base64 --decode > ~/keys/minesweeper.jks
+      - run: echo ${JSON_KEY_DATA} | base64 --decode > ~/keys/api.json
+      - run: echo ${MINESWEEPER_JKS} | base64 --decode > ~/keys/minesweeper.jks
       - run: flutter build appbundle
