--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,5 +10,5 @@ jobs:
       - run: mkdir ~/keys
       - run: echo ${KEY_PROPERTIES} | base64 --decode > ~/src/android/key.properties
       - run: echo ${JSON_KEY_DATA} | base64 --decode > ~/keys/api.json
-      - run: echo ${MINESWEEPER_JKS} | base64 --decode > ~/keys/minesweeper.jks
+      - run: echo ${MINESWEEPER_JKS} | base64 --decode > ~/src/android/minesweeper.jks
       - run: flutter build appbundle
