--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  screenshots: ^0.1.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
+  test: any
 
 
 # For information on the generic Dart part of this file, see the
