Add Nexus 5X screenshot

--- a/screenshots.yaml
+++ b/screenshots.yaml
@@ -21,6 +21,7 @@ devices:
     - iPhone X
     - iPad Pro (12.9-inch) (2nd generation)
   android:
+    - Nexus 5X
     - Nexus 6P
 
 # Frame screenshots
